Some endpoints implemented
