# docs/swagger.yaml
@@ -9,6 +9,22 @@ definitions:
     required:
     - name
     type: object
+  job.CreateJobRequest:
+    properties:
+      descriptions:
+        type: string
+      image:
+        type: string
+      is_equipment_required:
+        type: boolean
+      name:
+        type: string
+      valid_until:
+        type: string
+    required:
+    - descriptions
+    - name
+    type: object
   location.CreateLocationRequest:
     properties:
       latitude:
@@ -29,6 +45,47 @@ definitions:
     - amount
     - currency
     type: object
+  rating.CreateRatingRequest:
+    properties:
+      contract_id:
+        type: string
+      points:
+        type: integer
+      user_id:
+        type: string
+    required:
+    - contract_id
+    - points
+    - user_id
+    type: object
+  userDetail.CreateUserDetailRequest:
+    properties:
+      bio:
+        type: string
+      email:
+        type: string
+      location_id:
+        type: string
+      telephone:
+        type: string
+    required:
+    - email
+    - telephone
+    type: object
+  userDetail.UpdateUserDetailRequest:
+    properties:
+      bio:
+        type: string
+      email:
+        type: string
+      location_id:
+        type: string
+      telephone:
+        type: string
+    required:
+    - email
+    - telephone
+    type: object
   view.CategoryEmptyView:
     properties:
       id:
@@ -43,6 +100,11 @@ definitions:
       id:
         type: string
       name:
+        type: string
+    type: object
+  view.JobEmptyView:
+    properties:
+      id:
         type: string
     type: object
   view.LocationEmptyView:
@@ -85,6 +147,19 @@ definitions:
       user_id:
         type: string
     type: object
+  view.RatingView:
+    properties:
+      contract_id:
+        type: string
+      id:
+        type: string
+      points:
+        type: integer
+      submitted_by_id:
+        type: string
+      user_id:
+        type: string
+    type: object
   view.Response:
     properties:
       message:
@@ -104,11 +179,26 @@ definitions:
       user_id:
         type: string
     type: object
-host: 127.0.0.1:5000
+  view.UserDetailView:
+    properties:
+      bio:
+        type: string
+      email:
+        type: string
+      id:
+        type: string
+      location_id:
+        type: string
+      telephone:
+        type: string
+      user_id:
+        type: string
+    type: object
+host: 127.0.0.1:8888
 info:
   contact: {}
-  description: File API Service.
-  title: File Server
+  description: Hiringo API Service.
+  title: Hiringo API
   version: "1.0"
 paths:
   /categories:
@@ -205,7 +295,102 @@ paths:
       security:
       - JWT: []
       tags:
-      - location
+      - category
+  /jobs:
+    post:
+      consumes:
+      - application/json
+      description: Create Job
+      parameters:
+      - description: Job related informations
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/job.CreateJobRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/view.Response'
+            - properties:
+                payload:
+                  $ref: '#/definitions/view.RatingView'
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/view.Response'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/view.Response'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/view.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/view.Response'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/view.Response'
+      security:
+      - JWT: []
+      tags:
+      - job
+  /jobs/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete Job
+      parameters:
+      - description: Job id
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/view.Response'
+            - properties:
+                payload:
+                  $ref: '#/definitions/view.JobEmptyView'
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/view.Response'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/view.Response'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/view.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/view.Response'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/view.Response'
+      security:
+      - JWT: []
+      tags:
+      - job
   /locations:
     post:
       consumes:
@@ -254,7 +439,7 @@ paths:
       - JWT: []
       tags:
       - location
-  /locations{id}:
+  /locations/{id}:
     delete:
       consumes:
       - application/json
@@ -301,6 +486,54 @@ paths:
       - JWT: []
       tags:
       - location
+  /ratings:
+    post:
+      consumes:
+      - application/json
+      description: Create Rating
+      parameters:
+      - description: User id (send points to user) and points
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/rating.CreateRatingRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/view.Response'
+            - properties:
+                payload:
+                  $ref: '#/definitions/view.RatingView'
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/view.Response'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/view.Response'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/view.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/view.Response'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/view.Response'
+      security:
+      - JWT: []
+      tags:
+      - rating
   /transactions:
     post:
       consumes:
@@ -349,6 +582,164 @@ paths:
       - JWT: []
       tags:
       - transaction
+  /user-details:
+    post:
+      consumes:
+      - application/json
+      description: Create Category
+      parameters:
+      - description: User details for user
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/userDetail.CreateUserDetailRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/view.Response'
+            - properties:
+                payload:
+                  $ref: '#/definitions/view.UserDetailView'
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/view.Response'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/view.Response'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/view.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/view.Response'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/view.Response'
+      security:
+      - JWT: []
+      tags:
+      - user-detail
+  /user-details/{id}:
+    put:
+      consumes:
+      - application/json
+      description: Update user details
+      parameters:
+      - description: User Detail id
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: User details
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/userDetail.UpdateUserDetailRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/view.Response'
+            - properties:
+                payload:
+                  $ref: '#/definitions/view.UserDetailView'
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/view.Response'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/view.Response'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/view.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/view.Response'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/view.Response'
+      security:
+      - JWT: []
+      tags:
+      - user-detail
+  /user-details/{id}/reveal:
+    post:
+      consumes:
+      - application/json
+      description: Get user details by contract id
+      parameters:
+      - description: User Detail id
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Contract details
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/userDetail.CreateUserDetailRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/view.Response'
+            - properties:
+                payload:
+                  $ref: '#/definitions/view.UserDetailView'
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/view.Response'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/view.Response'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/view.Response'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/view.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/view.Response'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/view.Response'
+      security:
+      - JWT: []
+      tags:
+      - user-detail
 securityDefinitions:
   JWT:
     in: header
